<resources>
    <string name="app_name">QuotesHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_notifications">Authors</string>
    <string name="title_misc">Misc</string>
    <string name="title_video">Videos</string>

    <string name="common_zero">0</string>
    <string name="more_loading">loading...</string>
    <string name="see_all">See All</string>
    <string name="quotation">"</string>

    <!-- single author xml -->
    <string name="author_fav">Favorite</string>
    <string name="author_quotes">Quotes</string>

    <!-- common actions icons -->
    <string name="like_button">Like</string>
    <string name="copy_button">Copy</string>
    <string name="share_button">Share</string>

    <!-- -->
    <string name="err_msg">Network Error Occurred</string>
    <string name="err_msg_2">Something went wrong</string>
    <string name="try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fav_quotes">Favorite Quotes</string>
    <string name="find_fb_page">Facebook Page</string>
    <string name="find_twitter">Twitter Page</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review_page">Rate Us</string>

    <string name="remove_fav">Remove from favorites</string>
    <string name="add_fav">Add to favorites</string>
    <string name="copy_quote">Copy to clipboard</string>
    <string name="share_quote">Share to social media</string>
    <string name="misc_title">Miscellaneous</string>

    <string name="empty_quote">No Quote Found</string>
</resources>
