<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/group_home"
            android:checkableBehavior="single">
        <item
                android:id="@+id/navigation_home"
                android:icon="@drawable/ic_home"
                android:title="@string/title_home"/>
    </group>


    <group
            android:id="@+id/group_dashboard"
            android:checkableBehavior="single">
        <item
                android:id="@+id/navigation_dashboard"
                android:icon="@drawable/ic_list"
                android:title="@string/title_dashboard"/>
    </group>


    <group
            android:id="@+id/group_notif"
            android:checkableBehavior="single">
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_author"
            android:title="@string/title_notifications"/>
    </group>

    <group
            android:id="@+id/group_fav"
            android:checkableBehavior="single">
    <item
            android:id="@+id/drawer_fav"
            android:icon="@drawable/ic_star"
            android:title="@string/fav_quotes" />
    </group>

    <group
            android:id="@+id/group_fb"
            android:checkableBehavior="single">
    <item
            android:id="@+id/drawer_fb"
            android:icon="@drawable/ic_facebook"
            android:title="@string/find_fb_page"/>
    </group>

    <group
            android:id="@+id/group_tnc"
            android:checkableBehavior="single">
    <item
            android:id="@+id/drawer_tnc"
            android:icon="@drawable/ic_contract"
            android:title="@string/terms_condition"/>
    </group>

    <group
            android:id="@+id/group_pol"
            android:checkableBehavior="single">
    <item
            android:id="@+id/drawer_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy"/>
    </group>

</menu>