<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/navigation_add_quote"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="Add Quote"/>
</menu>
