<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <TextView
            android:id="@+id/action_add_fav"
            android:text="@string/add_fav"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_star_unfilled"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/action_copy_quote"
            android:text="@string/copy_quote"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_copy"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/action_share_quote"
            android:text="@string/share_quote"
            android:textSize="24sp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_share"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>