<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            app:titleTextColor="@color/white"
            app:theme="@style/ToolbarTheme"
            android:fontFamily="@font/notosans_bold"
            app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
                android:text="@string/misc_title"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:id="@+id/fb_page"
            android:text="@string/find_fb_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_facebook_page"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shimmerColor"/>

    <TextView
            android:id="@+id/twitter_page"
            android:text="@string/find_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_twitter_page"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shimmerColor"/>

    <TextView
            android:id="@+id/tnc_page"
            android:text="@string/terms_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_terms_and_conditions"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shimmerColor"/>

    <TextView
            android:id="@+id/privacy_page"
            android:text="@string/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_privacy_policy"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shimmerColor"/>

    <TextView
            android:id="@+id/review_page"
            android:text="@string/review_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_rating"
            android:drawablePadding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shimmerColor"/>

</LinearLayout>