<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#f1f1f1"
            android:layout_height="wrap_content">

        <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/like_button"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#f1f1f1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_height="wrap_content">
        <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_button"
                android:gravity="center"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#f1f1f1"
            android:layout_height="wrap_content">
        <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_button"
                android:gravity="center"
        />
    </LinearLayout>
</LinearLayout>